--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logo-cropped.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon"  type="image/png" href="/logo-cropped.jpg" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#0d9488" />
+    <meta name="description" content="The hands & feet of Jesus Christ - Serving the Tri-State Area since 2023, connecting communities with needed resources and support." />
     <title>Pay It Forward Tri-State, Inc.</title>
   </head>
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
